RESOLVED FIXED249622
REGRESSION (257084@main): Mitigate crashes when calling into `WebPageProxy::loadAlternateHTML` with nil data
https://bugs.webkit.org/show_bug.cgi?id=249622
Summary REGRESSION (257084@main): Mitigate crashes when calling into `WebPageProxy::l...
Wenson Hsieh
Reported 2022-12-19 17:23:06 PST
Attachments
Wenson Hsieh
Comment 1 2022-12-19 17:38:25 PST
EWS
Comment 2 2022-12-20 12:21:34 PST
Committed 258156@main (2b837edd2587): <https://commits.webkit.org/258156@main> Reviewed commits have been landed. Closing PR #7889 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.